--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -15,6 +15,44 @@ body {
     overflow-x: hidden;
 }
 
+
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    clip-path: circle(0 0, 100% 0, 100% 100%, 0% 100%);
+    justify-content: center;
+    background: center / cover no-repeat url("../img/bg1.png");
+    height: 100%;
+}
+
+.conteudoPreloader img {
+    width: 50px;
+}
+
+.conteudoPreloader h1 {
+    font-family: var(--in);
+    color: white;
+}
+
+.conteudoPreloader p {
+    font-family: var(--in);
+    font-weight: 700;
+    color: var(--cr2);
+    animation: blink 1s infinite;
+}
+
+@keyframes blink {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0.2; }
+}
+
+
+
 #cursor {
     width: 30px;
     height: 30px;
@@ -58,7 +96,7 @@ body {
     font-family: "Libre Franklin";
 }
 
-.menu a h1 sup {
+sup {
     color: #40E164;
 }
 
@@ -282,6 +320,10 @@ body {
     font-size: 13pt;
     padding-block: 1.5rem;
     font-family: "Inter";
+}
+
+.secao3 {
+    background: 90% 5% / cover no-repeat url("../img/bg1.png");
 }
 
 .secao3 .conteudoSecao3 { 
@@ -548,25 +590,63 @@ body {
 }
 
 .secao8 {
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    font-family: "Geist";
+    font-size: 30pt;
+}
+footer {
     display: flex;
-    align-items: center;
+    padding-inline: 3rem;
+    background: #151515;
+    flex-direction: column;
+    font-family: system-ui;
+    background: 100% 5% / cover no-repeat url("../img/bg_footer.gif");
     justify-content: space-between;
 }
 
-.secao8 nav h4 {
-    color: white;
-    font-weight: bold;
-    font-family: "Geist";
-    font-size: 25pt;
-}
-
-.secao8 nav:nth-child(2) {
+footer div:nth-child(1) {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-between;
 }
 
-.secao8 nav img {
-    width: 70%;
+footer div:nth-child(1) nav p {
+    color: white;
+    font-weight: 300;
+    font-size: 10pt;
+    padding-block: .1rem;
+ }
+
+footer .navLogoFooter a {
+    text-decoration: none;
+    font-size: 16pt;
+    color: white;
+    font-family: "Libre Franklin";
+    font-weight: bolder;
+}
+
+
+footer div:nth-child(2) {
+    display: flex;
+    padding-block-start: 1rem;
+    justify-content: space-between;
+}
+
+footer div:nth-child(2) a {
+    color: gray;
+}
+
+footer div:nth-child(2) nav:nth-child(1) a {
+    font-weight: bold;
+    font-size: 11pt;
+}
+footer .iconeRedesSociais {
+    font-size: 18pt;
+}
+
+footer nav h5 {
+    font-size: 12pt;
+    font-weight: bold;
+    color: #40E194;
 }
