--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -71,11 +71,11 @@ sup {
 .menu .linksMenu {
     padding: .3rem;
     color: white;
-    font-weight: 200;
+    font-weight: 500;
     font-family: "Inter";
 }
 
-.menu .linksMenu.active {
+.menu .linksMenu:hover {
     color: #40E164;
     font-weight: 500;
 }
@@ -558,57 +558,66 @@ sup {
     font-family: "Geist";
     font-size: 30pt;
 }
-footer {
+
+.secao9 {
+   background: 50% 20% / cover no-repeat url("../img/bg1.png")
+}
+
+.secao9 div:nth-child(2) nav {
     display: flex;
-    padding-inline: 3rem;
-    background: #151515;
     flex-direction: column;
-    font-family: system-ui;
-    background: 100% 5% / cover no-repeat url("../img/bg_footer.gif");
-    justify-content: space-between;
+    padding-block: 1rem;
 }
 
-footer div:nth-child(1) {
-    display: flex;
-    justify-content: space-between;
-}
-
-footer div:nth-child(1) nav p {
-    color: white;
-    font-weight: 300;
-    font-size: 10pt;
-    padding-block: .1rem;
- }
-
-footer .navLogoFooter a {
-    text-decoration: none;
-    font-size: 16pt;
-    color: white;
-    font-family: "Libre Franklin";
-    font-weight: bolder;
-}
-
-
-footer div:nth-child(2) {
-    display: flex;
-    padding-block-start: 1rem;
-    justify-content: space-between;
-}
-
-footer div:nth-child(2) a {
-    color: gray;
-}
-
-footer div:nth-child(2) nav:nth-child(1) a {
-    font-weight: bold;
-    font-size: 11pt;
-}
-footer .iconeRedesSociais {
-    font-size: 18pt;
-}
-
-footer nav h5 {
-    font-size: 12pt;
-    font-weight: bold;
+.secao9 div:nth-child(2) nav h3 {
+    font-family: "Geist";
     color: #40E194;
 }
+.secao9 div:nth-child(2) nav p, ul {
+    font-family: "Geist";
+    color: white;
+}
+
+.secao9 div:nth-child(2) nav ul {
+    padding-inline-start: 3rem;
+}
+
+footer {
+    height: 15rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-inline: 3rem;
+    background: #151515;
+    background: 100% 2% / cover no-repeat url("../img/bg_footer.gif");
+}
+
+footer .navLogoFooter a {
+    color: white;
+    font-size: 16pt;
+    text-decoration: none;
+    font-family: "Libre Franklin";
+}
+
+footer nav:nth-child(2) a {
+    color: #b2b3b3;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: "Libre Franklin";
+}
+
+footer nav:nth-child(2) a:hover {
+    text-decoration: underline;
+}
+
+footer nav:nth-child(3) a {
+    font-size: 25pt;
+    color: #b2b3b3;
+    text-decoration: none;
+    transition: color .6s ease .2s;
+}
+
+footer nav:nth-child(3) a:hover {
+    color: #40E194;
+}
+
