--- a/views/termos.html
+++ b/views/termos.html
@@ -140,8 +140,8 @@
                 <a href="#"><h1>777<sup>PY &copy;</sup></h1></a>
             </nav>
             <nav>
-                <a href="termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a> &nbsp;
-                <a href="#" target="_blank" rel="noopener noreferrer nofollow">Políticas de Privacidade</a>
+                <a href="termos.html" target="_top" rel="noopener noreferrer nofollow">Termos e Condições</a> &nbsp;
+                <a href="politica.html" rel="noopener noreferrer nofollow">Políticas de Privacidade</a>
             </nav>
             <nav>
                 <a href="#"><i class="fa-brands fa-square-facebook iconeRedesSociais"></i></a>
