Adicionamos novas Políticas de Privacidade e Termos e Condições

--- a/views/politica.html
+++ b/views/politica.html
@@ -38,6 +38,11 @@
 
             <div>
 
+<nav>
+                    <h3>0. Identidade da equipe</h3>
+                    <p>A equipe responsável pelo 777PY reserva-se o direito de manter sua identidade em sigilo. Isso inclui a não divulgação de dados pessoais, cargos, nomes reais ou quaisquer outras informações identificáveis. Quando necessário, poderão ser utilizados nomes fictícios, apelidos ou imagens meramente ilustrativas para preservar a privacidade dos envolvidos.</p>
+                </nav>
+
                 <nav>
                     <h3>1. Interpretações e Definições</h3>
                     <p>1.1 - Interpretação</p>
