--- a/views/termos.html
+++ b/views/termos.html
@@ -35,6 +35,16 @@
             </div>
 
             <div>
+	
+	 <nav>
+                    <h3>Natureza do projeto e uso do termo "Desafio"</h3>
+                    <p>Ressaltamos que o 777PY é um projeto de pesquisa científica e estatísticas voltada à análise de previsões e padrões. Não promovemos casas de apostas, jogos de azar ou qualquer atividade similar. Em determinadas seções do site ou conteúdos produzidos oficialmente por nós, utilizamos o termo "Desafio" como referência à nossa pesquisa. Esse termo é adotado para fins didáticos, publicitários e de edutretenimento, conforme o objetivo lúdico do projeto.</p>
+</nav>
+
+<nav>
+                    <h3>Adaptação de termos técnicos</h3>
+                    <p>Alguns termos científicos e/ou técnicos presentes no site e em nossos materiais podem ter sido adaptados, simplificados ou parafraseados. Essa decisão visa garantir acessibilidade e compreensão a um público com diferentes níveis de conhecimento técnico, origens regionais, e realidades sociais distintas, bem como facilitar a linguagem publicitária.</p>
+</nav>
 
                 <nav>
                     <h3>Termos Específicos do 777PY</h3>
@@ -43,8 +53,6 @@
                         <li>Não incentivamos o uso indevido de dados para apostas ilegais e imoderada ou atividades não regulamentadas;</li>
                         <li>Todo conteúdo gerado por IA ou algoritmos é fornecido "como está", com próposito linguístico, científico, experimental ou educativo;</li>
                         <li>Os usuários são responsáveis por interpretar, utilizar e partilhar as informações conforme a sua própria análise, habilidade ou julgamento;</li>
-                        <li>Alguns termos científicos e/ou técnicos foram alterados ou parafraseados para abrangência e entendimento de pessoas com diferentes habilidades, conhecimento técnico, regiões distintas ou impacto social e publicitário;</li>
-                        <li>Estamos promovendo uma pesquisa científica, não estamos divulgado uma casa de aposta ou promovendo um jogo de azar. Em certas seções do site ou qualquer conteúdo oficialmente criado por nós usaremos o termo "DESAFIO" para se referir a nossa PESQUISA CIENTÍFICA e nos reservamos ao direito de usá-lo em nossos materiais para fins publicitários ou entretenimento.</li>
                     </ul>
                 </nav>
 
