--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -19,7 +19,7 @@ body {
     width: 30px;
     height: 30px;
     position: fixed;
-    z-index: 11;
+    z-index: 1001;
     border-radius: 100%;
     pointer-events: none;
     background: transparent;
@@ -621,3 +621,210 @@ footer nav:nth-child(3) a:hover {
     color: #40E194;
 }
 
+#divEnviarPalpite {
+    padding: 2rem;
+    position: absolute;
+    z-index: 1000;
+    top: 0;
+    background: rgba(0, 0, 0, 30%);
+    backdrop-filter: blur(4px);
+    display: flex; 
+    align-items: center;
+    transition: all .3s ease;
+    justify-content: center;
+    opacity: 0;
+    transform: translateY(-100%);
+}
+
+#divEnviarPalpite.activo {
+    opacity: 1;
+    transform: translateY(0%);
+}
+
+.primeirosInputs {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#divEnviarPalpite form {
+    width: 80%;
+    background: #212121;
+    border: 2px solid #2E2C2C;
+    display: flex;
+    border-radius: 10px;
+    padding: 1rem;
+    align-items: top;
+    justify-content: space-around;
+}
+
+
+#divEnviarPalpite form div.imgForm img {
+    width: 450px;
+    border-radius: 10px;
+    filter: grayscale(100%);
+    transition: all .3s ease-in-out;
+}
+
+#divEnviarPalpite form div.imgForm:hover img {
+    filter:grayscale(0%);
+}
+
+#divEnviarPalpite form div:nth-child(2) {
+    gap: 2rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+form div:nth-child(2) nav h3 {
+    font-size: 14pt;
+    font-family: "Geist";
+}
+
+form .contentInputForm {
+    margin-block: 1rem;
+    position: relative;
+}
+
+form .contentInputForm h4 {
+    font-family: "Geist";
+    color: #40E194;
+}
+
+form .contentInputForm h5 {
+    color: gray;
+    font-size: 7pt;
+    font-family: "Geist";
+}
+
+form .navInputFormRadio input {
+    display: none;
+}
+
+form .navInputFormRadio label {
+    background: #212121;
+    color: gray;
+    position: relative;
+    cursor: pointer;
+    font-family: "Inter";
+    font-weight: bold;
+    border: 2px solid #2E2C2C;
+    padding: .5rem;
+    border-radius: 20px;
+}
+
+.contentInputForm .navInputFormText span {
+    padding: .1rem;
+    font-size: 10pt;
+    font-weight: 700;
+    font-family: "Inter";
+    left: 1%;
+    color: white;
+    top: 14%;
+    border-radius: 10px;
+    position: absolute;
+    background: #212121;
+}
+
+input {
+    outline: none;
+}
+
+.contentInputForm .navInputFormText input {
+    width: 300px;
+    padding: .4rem;
+    font-weight: 700;
+    color: #fff;
+    font-family: "Inter";
+    border: 2px solid #2E2C2C;
+    background: transparent;
+}
+
+.contentInputForm .navInputFormText input:focus,
+.contentInputForm .navInputFormText input:not(:placeholder-shown) {
+    border: 2px solid #40E194;
+}
+
+/* Mover o label quando o input está focado ou preenchido */
+.contentInputForm .navInputFormText input:focus + span,
+.contentInputForm .navInputFormText input:not(:placeholder-shown) + span {
+    top: -25%;
+    color: #40E194;
+}
+
+.contentInputForm .navContentFile {
+    display: flex;
+    justify-content: center;
+}
+
+.contentInputForm .navContentFile input {
+    display: none
+}
+.contentInputForm .navContentFile label {
+    background: #40E194;
+}
+
+.contentInputForm .navContentTextArea textArea {
+    height: 140px;
+    width: 350px;
+    border-radius: 10px;
+    color: white;
+    background: transparent;
+    resize: none;
+    outline: none;
+    padding: 1rem;
+    font-family: "Inter";
+    font-weight: 700;
+    border: 2px solid #2E2C2C
+}
+
+.contentInputForm .navContentFile label nav {
+    height: 140px;
+    border: 2px solid #40E194;
+    padding: 2rem;
+    font-weight: bolder;
+    display: flex;
+    font-family: "Inter";
+    align-items: center;
+    flex-direction:column;
+    justify-content: center;
+    border-radius: 10px;
+    border: 2px solid #2E2C2C;
+}
+
+.navContentCheck {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
+form .navInputFormRadio input:checked + label {
+    background: #40E194;
+    color: white;
+    border: 2px solid #40E194;
+}
+
+.navContentCheck nav span {
+    color: white;
+    font-size: 11pt;
+    font-weight: 300;
+    font-family: "Inter";
+}
+
+.navContentCheck nav span a {
+    color: gray;
+    font-weight: 400;
+}
+
+.navBtnsForm {
+    position: absolute;
+    bottom: 6%;
+    right: 5%;
+}
+
+form .linkLogoForm {
+    color: white;
+    text-decoration: none;
+}
