--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -56,12 +56,10 @@ body {
     text-decoration: none;
 }
 
-.menu a h1 {
-    color: #fff;
-    font-size: 24pt;
-    font-weight: bolder;
-    font-family: "Libre Franklin";
+.menu .imgLogoMenu {
+    width: 16%;
 }
+
 
 sup {
     color: #40E164;
@@ -594,42 +592,67 @@ sup {
 }
 
 footer {
-    height: 15rem;
     display: flex;
-    justify-content: space-between;
+    padding: 2rem 3rem;
     align-items: center;
-    padding-inline: 3rem;
-    background: #151515;
-    background: 100% 2% / cover no-repeat url("../img/bg_footer.gif");
+    background: #151515;    
+    flex-direction: column;
+    background: 50% -50% / 45% no-repeat url("../img/bg_footer.gif");
+    background-color: #151515;
+} 
+
+footer nav:nth-child(1) {
+    display: flex;
+    justify-content: center;
 }
 
-footer .navLogoFooter a {
-    color: white;
+footer nav:nth-child(1) img {
+    width: 130px;
+}
+
+footer .socialRodape {
+    color: gray;
     font-size: 16pt;
-    text-decoration: none;
-    font-family: "Libre Franklin";
+    transition: all .4s ease .1s;
+}
+footer .socialRodape:hover, 
+footer .socialRodape:active {
+    color: #40E194;
+}
+
+footer nav:nth-child(2) {
+    display: flex;
+    padding-block: 1rem;
+    gap: 3rem;
 }
 
 footer nav:nth-child(2) a {
-    color: #b2b3b3;
+    color: gray;
+    font-size: 11pt;
     text-decoration: none;
-    font-weight: bold;
-    font-family: "Libre Franklin";
+    font-family: "Inter";
 }
 
 footer nav:nth-child(2) a:hover {
     text-decoration: underline;
 }
 
-footer nav:nth-child(3) a {
-    font-size: 25pt;
-    color: #b2b3b3;
-    text-decoration: none;
-    transition: color .6s ease .2s;
+footer nav:nth-child(3) {
+    width: 100%;
+    color: white;
+    display: flex;
+    font-size: 10pt;
+    font-weight: 200;
+    padding-top: 1rem;
+    align-items: center;
+    font-family: "Libre Franklin";
+    justify-content: space-between;
 }
 
-footer nav:nth-child(3) a:hover {
-    color: #40E194;
+footer nav:nth-child(3) div:nth-child(2) {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
 }
 
 #divEnviarPalpite {
@@ -943,8 +966,8 @@ form .linkLogoForm {
         z-index: 100;
     }
 
-    .menu a h1 {
-        font-size: 22pt;
+    .menu .imgLogoMenu {
+        width: 28%;
     }
 
     .secao1 {
@@ -969,10 +992,14 @@ form .linkLogoForm {
     } 
 
     .secao .divTopoSecao {
-        display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
+        text-align: left;   
+    }
+
+    .secao .textoSecaoLado {
+        text-align: left;
+        padding-left: 0;
+        padding-top: .5rem;
     }
 
     .secao3 {
@@ -1081,4 +1108,27 @@ form .linkLogoForm {
         font-size: 10pt;
     }
 
+    footer {
+        background: 50% -90% / 45% no-repeat url("../img/bg_footer.gif");
+        background: #151515;
+    } 
+
+    footer nav:nth-child(2) {
+        text-align: center;
+        flex-direction: column;
+        padding-block: .2rem;
+    }
+
+    footer nav:nth-child(3) {
+        text-align: center;
+        flex-direction: column;
+    }
+
+    footer nav:nth-child(3) div:nth-child(2) {
+        padding-block: 1rem;
+    }
+    footer nav:nth-child(2) a:active  {
+        color: #40E194;
+        text-decoration: underline;
+    }
  }
