--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -898,6 +898,38 @@ form .linkLogoForm {
     transform: translateX(0);
 }
 
+#preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #151515; /* cor de fundo escura e elegante */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  
+  .preloader-container {
+    text-align: center;
+  }
+  
+  .preloader-gif {
+    width: 80px;
+    height: 80px;
+    object-fit: contain;
+    margin-bottom: 20px;
+  }
+  
+  .preloader-text {
+    font-family: 'Geist';
+    font-weight: bold;
+    font-size: 24pt;
+    color: gray;
+  }
+  
+
 @media screen and (max-width: 768px) {
 
     #cursor {
@@ -1109,8 +1141,8 @@ form .linkLogoForm {
     }
 
     footer {
-        background: 50% -90% / 45% no-repeat url("../img/bg_footer.gif");
-        background: #151515;
+        background: -30% 100% / 50% no-repeat url("../img/bg_footer.gif");
+        background-color: #151515;
     } 
 
     footer nav:nth-child(2) {
