--- a/views/termos.html
+++ b/views/termos.html
@@ -2,7 +2,7 @@
 <html lang="pt-AO">
 <head>
     <meta charset="UTF-8"> 
-    <title>777py | Termos e Condições</title>
+    <title>777PY | Termos e Condições</title>
     <meta property="og:type" content="website">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/logo_ico.ico" type="image/x-icon">
     <meta property="og:image" content="https://www.777py.com/imagens/777py-cover.png">
     <meta property="og:title" content="777py - Previsões Inteligentes para Esportes, Política e Clima">
     <meta name="keywords" content="777py, 777Angola, apostas, aposta em Angola, palpites, ciência, estatísticas">
@@ -132,7 +132,7 @@
 
                 <nav>
                     <h3>Fale Connosco</h3>
-                    <p>Se tiver dúvidas sobre os nossos Termos e Condições, entre em Contanto:</p>
+                    <p>Se tiver dúvidas sobre os nossos Termos e Condições, entre em contacto:</p>
                     <p>E-mail: apoio@777py.com</p>
                     <p>Telefone: 999 111 000 | 999 111 222</p>
                 </nav>
@@ -144,18 +144,34 @@
         </nav>
 
         <footer>
-            <nav class="navLogoFooter">
-                <a href="#"><h1>777<sup>PY &copy;</sup></h1></a>
+            <nav>
+                <a href="#" rel="_top noopener noreferrer nofollow"><img src="../assets/img/logo.png" alt="logo da 777PY" srcset="../assets/img/logo.png"></a>
             </nav>
             <nav>
-                <a href="termos.html" target="_top" rel="noopener noreferrer nofollow">Termos e Condições</a> &nbsp;
-                <a href="politica.html" rel="noopener noreferrer nofollow">Políticas de Privacidade</a>
+                <a href="./views/termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a>
+                <a href="./views/politica.html" rel="noopener noreferrer nofollow">Política de Privacidade</a>
+                <a href="#perguntasFrequentes" rel="noopener noreferrer nofollow">Perguntas Frequentes</a>
+                <a href="#comoFunciona" rel="noopener noreferrer nofollow">Como Funciona?</a>
             </nav>
             <nav>
-                <a href="#"><i class="fa-brands fa-square-facebook iconeRedesSociais"></i></a>
-                <a href="#"><i class="fa-brands fa-square-whatsapp iconeRedesSociais"></i></a>
-                <a href="#"><i class="fa-brands fa-square-instagram iconeRedesSociais"></i></a>
-                <a href="#"><i class="fa-brands fa-square-x-twitter iconeRedesSociais"></i></a>
+                <div>Luanda, Angola</div>
+                <div>
+                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-brands fa-facebook-f socialRodape"></i></a>
+                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-brands fa-whatsapp socialRodape"></i></a>
+                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-solid fa-paper-plane socialRodape"></i></a>
+                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-solid fa-phone socialRodape"></i></a>
+                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-brands fa-github socialRodape"></i></a>
+                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-brands fa-instagram socialRodape"></i></a>
+                </div>
+                <div>
+                    <p>
+                        <script>
+                            var ano =  new Date;
+                            var anoAtual = ano.getFullYear();
+                            document.write("&copy;" + anoAtual + " — <span style='font-weight: 800;'>777<sup>PY</sup></span> — Todos os direitos reservados")
+                        </script>
+                    </p>
+                </div>
             </nav>
         </footer>
     </main>
