--- a/views/termos.html
+++ b/views/termos.html
@@ -30,7 +30,7 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Termos <span class="textoSemEfeito">e Condições</span></h2>
-                    <p class="textoSecao">Bem-vindo ao <span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span>! Estes termos e condições estabelecem as regras para o uso do website <span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span> localizado em <span style="font-weight: 500;">https://www.777py.com/</span> e da pesquisa científica organizada pela nossa startup! Ao acessar esse site e participar da pesquisa, consideramos que você está de acordo com os termos e condições aqui descritos ou em qualquer material digital ou físico da nossa autoria. Não participe da pesquisa ou pare de usar imediatamente o <span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span> caso não concorde com todos os termos e condições estabelecidos por nós.</p>
+                    <p class="textoSecao">Bem-vindo ao <span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span>! Estes Termos e Condições estabelecem as regras para o uso do website <span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span> localizado em <span style="font-weight: 500;">https://www.777py.com/</span> e da pesquisa científica organizada pela nossa startup! Ao acessar esse site e participar da pesquisa, consideramos que você está de acordo com os Termos e Condições aqui descritos ou em qualquer material digital ou físico da nossa autoria. Não participe da pesquisa ou pare de usar imediatamente o <span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span> caso não concorde com todos os Termos e Condições estabelecidos por nós.</p>
                 </nav>
             </div>
 
@@ -145,11 +145,11 @@
 
         <footer>
             <nav>
-                <a href="#" rel="_top noopener noreferrer nofollow"><img src="../assets/img/logo.png" alt="logo da 777PY" srcset="../assets/img/logo.png"></a>
+                <a href="../index.html" rel="_top noopener noreferrer nofollow"><img src="../assets/img/logo.png" alt="logo da 777PY" srcset="../assets/img/logo.png"></a>
             </nav>
             <nav>
-                <a href="./views/termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a>
-                <a href="./views/politica.html" rel="noopener noreferrer nofollow">Política de Privacidade</a>
+                <a href="termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a>
+                <a href="politica.html" rel="noopener noreferrer nofollow">Política de Privacidade</a>
                 <a href="#perguntasFrequentes" rel="noopener noreferrer nofollow">Perguntas Frequentes</a>
                 <a href="#comoFunciona" rel="noopener noreferrer nofollow">Como Funciona?</a>
             </nav>
