--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -12,9 +12,31 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     overflow-x: hidden;
-    scroll-behavior: smooth;
+}
+
+.textoColorido {
+    color:#9c9696;
+}
+
+.textoColoridoVerde {
+    color: #40E194;
+}
+
+.textoBold {
+    font-weight: bold;
+}
+
+.textoGradiente {
+    color: transparent; 
+    background-clip: text;
+    background: linear-gradient(90deg, #ffffff 0%, #e0e0e0 50%, #a0a0a0 100%);
+    -webkit-background-clip: text; /* Para navegadores WebKit (Chrome, Safari) */
 }
 
 #cursor {
@@ -61,7 +83,6 @@ body {
     width: 16%;
 }
 
-
 sup {
     color: #40E164;
 }
@@ -73,8 +94,8 @@ sup {
 }
 
 .menu .linksMenu {
-    padding: .3rem;
     color: white;
+    padding: .3rem;
     font-weight: 500;
     font-family: "Inter";
 }
@@ -85,7 +106,6 @@ sup {
 }
 
 .navBtns {
-    padding: .5rem;
     padding: .3rem;
     width: max-content;
     border-radius: 999px;
@@ -189,11 +209,6 @@ sup {
     font-size: 14pt;
 }
 
-.textoColorido {
-    color:#9c9696;
-}
-
-
 .secao2 .conteudoSecao {
     display: flex;
     width: 75%;
@@ -269,7 +284,7 @@ sup {
     font-family: "Montserrat"
 }
 
-.todosFundadores, .navVerMaisFunciona {
+.navVerMaisFunciona {
     display: flex;
     padding-top: 2rem;
     justify-content: center;
@@ -325,36 +340,63 @@ sup {
     color: #40E194;
 }
 
-.conteudoSecao4 .CardFundador {
-    border: 2px solid #2E2C2C;
-    width: 25%;
-    margin: 1rem;
-    padding: 1rem;
-    display: flex;
-    text-align: center;
+.secao4 {
+    min-height: 100vh;
     position: relative;
-    align-items: center;
-    border-radius: 10px;
-    justify-content: center;
-    flex-direction: column;
 }
 
+.conteudoSecao4 {
+    gap: 1rem;
+    display: flex; 
+    padding-block: 2rem;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.conteudoSecao4 .CardFundador {
+    top: 7rem;
+    z-index: 0;
+    width: 25%;
+    margin: 2rem;
+    padding: 1rem;
+    display: flex;
+    position: sticky;
+    text-align: center;
+    align-items: center;
+    border-radius: 10px;
+    background: #151515;
+    flex-direction: column;
+    justify-content: center;
+    border: 2px solid #2E2C2C;
+    transition: transform 0.4s ease;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+}
+
+.CardFundador:nth-child(1) { z-index: 1; }
+.CardFundador:nth-child(2) { z-index: 2; }
+.CardFundador:nth-child(3) { z-index: 3; }
+.CardFundador:nth-child(4) { z-index: 4; }
+.CardFundador:nth-child(5) { z-index: 5; }
+.CardFundador:nth-child(6) { z-index: 6; }
+.CardFundador:nth-child(7) { z-index: 7; }
+.CardFundador:nth-child(8) { z-index: 8; }
+
 .CardFundador .efeitoCard {
-    position: absolute;
-    background: red;
+    top: -3%;
+    left: 4%;
+    z-index: 1;
     height: 8%;
     width: 25%;
-    top: -3%;
-    z-index: 1;
-    border: 2px solid #2E2C2C;
-    background: #151515;
+    position: absolute;
     border-radius: 999px;
-    left: 4%;
+    background: #151515;
+    border: 2px solid #2E2C2C;
 }
 
 .CardFundador .efeitoCard1 {
-    left: 88%;
     top: 50%;
+    left: 88%;
     transform: rotate(90deg)
 }
 
@@ -368,16 +410,16 @@ sup {
 }
 
 .CardFundador .efeitoCard4 {
-    left: -12%;
     top: 30%;
+    left: -12%;
     transform: rotate(90deg)
 }
 .CardFundador .efeitoCard5 {
     left: 50%;
 }
 .CardFundador .efeitoCard6 {
-    left: -12%;
     top: 50%;
+    left: -12%;
 }
 
 .CardFundador .efeitoCard7 {
@@ -397,8 +439,8 @@ sup {
 }
 
 .CardFundador .efeitoCard10 {
-    left: 10%;
     top: -4%;
+    left: 10%;
 }
 
 .CardFundador .efeitoCard11 {
@@ -407,8 +449,8 @@ sup {
 }
 
 .CardFundador .efeitoCard12 {
-    left: 80%;
     top: 1%;
+    left: 80%;
     transform: rotate(90deg)
 }
 
@@ -428,7 +470,7 @@ sup {
     transition: filter .3s ease .2s;
 }
 
-.CardFundador:hover .imgFundador img {
+.CardFundador.active .imgFundador img {
     filter: grayscale(0);
 }
 
@@ -450,21 +492,6 @@ sup {
     color: #fff;
     font-weight: 200;
     font-family: "Inter";
-}
-
-.secao4 .conteudoSecao4 {
-    display: flex;
-    flex-wrap: wrap;
-    overflow: hidden;
-    height: 625px;
-    justify-content: center;
-    align-items: center;
-    padding-top: 2rem;
-    transition: height .8s ease .2s;
-}
-
-.secao4 .conteudoSecao4.ativo {
-    height: 2000px;
 }
 
 .secao5 .conteudoPerguntas {
@@ -538,9 +565,9 @@ sup {
 
 .secao7 {
     display: flex;
+    text-align: center;
     align-items: center;
     flex-direction: column;
-    text-align: center;
     justify-content: center;
 }
 
@@ -551,12 +578,6 @@ sup {
     font-size: 30pt;
 }
 
-.textoGradiente {
-    background: linear-gradient(90deg, #ffffff 0%, #e0e0e0 50%, #a0a0a0 100%);
-    -webkit-background-clip: text; /* Para navegadores WebKit (Chrome, Safari) */
-    background-clip: text;
-    color: transparent; 
-}
 
 .videoExplicativo {
     width: 80%;
@@ -864,9 +885,8 @@ form .navInputFormRadio input:checked + label {
     right: 5%;
 }
 
-form .linkLogoForm {
-    color: white;
-    text-decoration: none;
+form .linkLogoForm img {
+    width: 50px;
 }
 
 .DivInputContePalpite {
@@ -992,7 +1012,7 @@ form .linkLogoForm {
         right: 0;
         text-align: center;
         width: 100vw;
-        clip-path: circle(100px at 90% -15%);
+        clip-path: circle(100px at 90% -25%);
         pointer-events: none;
         background: black;
         justify-content: space-around;
@@ -1046,6 +1066,21 @@ form .linkLogoForm {
         padding-top: .5rem;
     }
 
+
+    .secao2 .conteudoSecao {
+        width: 95%;
+        height: 420px;
+    } 
+    
+    .secao2 .conteudoSecao.active {
+        height: max-content;
+    }
+    
+    .secao2 .conteudoSecao .cardFunciona {
+        width: 90%;
+        flex-shrink: 0;
+    } 
+
     .secao3 {
         background: 30% 100% / cover no-repeat url("../img/bg1.png");
     }
@@ -1067,6 +1102,11 @@ form .linkLogoForm {
         font-size: 14pt;
         text-align: center;
     }
+
+    .conteudoSecao4 .CardFundador {
+        width: 85%;
+    }
+
     .secao6 .textoImpactante, .secao7 .textoSecao7, .navTextoSecao8 h4 {
         width: 100%;
         font-size: 20pt;
