Alteração da foto do fundador

--- a/views/politica.html
+++ b/views/politica.html
@@ -177,19 +177,18 @@
             
             </div>
         </section>
-        <nav style="background: #151515; padding-inline-start: 3rem;">
-            <a href="../index.html" rel="noopener noreferrer nofollow"><button class="btn">Voltar a Página Inicial</button></a>
+        <nav class="btnVoltarHomeTermPolitics">
+            <a href="../" rel="noopener noreferrer nofollow"><button class="btn">Voltar a Página Inicial</button></a>
         </nav>
 
         <footer>
             <nav>
-                <a href="../index.html" rel="_top noopener noreferrer nofollow"><img src="../assets/img/logo.png" alt="logo da 777PY" srcset="../assets/img/logo.png"></a>
+                <a href="../" rel="_top noopener noreferrer nofollow"><img src="../assets/img/logo.png" alt="logo da 777PY" srcset="../assets/img/logo.png" draggable="false"></a>
             </nav>
             <nav>
+                <a href="#" target="_top" rel="noopener noreferrer nofollow">Voltar ao Topo</a>
                 <a href="termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a>
                 <a href="politica.html" rel="noopener noreferrer nofollow">Política de Privacidade</a>
-                <a href="#perguntasFrequentes" rel="noopener noreferrer nofollow">Perguntas Frequentes</a>
-                <a href="#comoFunciona" rel="noopener noreferrer nofollow">Como Funciona?</a>
             </nav>
             <nav>
                 <div>Luanda, Angola</div>
