--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -68,15 +68,15 @@ body {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     display: flex;
     z-index: 9999;
     position: fixed;
-    overflow-x: hidden;
     align-items: center;
     padding-inline: 2rem;
     background: #151515;
     justify-content: center;
+    overflow: hidden !important;
     transition: clip-path 1s ease; 
     clip-path: circle(100% at 50% 50%); 
   }
