--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1255,16 +1255,14 @@ form .linkLogoForm img {
 
     #divEnviarPalpite {
         padding: 1rem;
-        overflow-y: auto;
-        align-items: flex-start;
+        overflow-y: scroll;
     }
     
     #divEnviarPalpite form {
-        top: 0;
         height: 100vh;
-        overflow: hidden;
-        overflow-y: scroll;
+        top: 0;
         margin-block-end: 5rem;
+        overflow-y: scroll;
     }
 
     #divEnviarPalpite form div.imgForm  {
@@ -1277,8 +1275,6 @@ form .linkLogoForm img {
         padding: 1rem;
         display: flex;
         flex-direction: column;
-        padding-bottom: 80px; /* Altura aproximada dos botões */
-        -webkit-overflow-scrolling: touch; /* Melhora scroll no iOS */
     }
     
     form div:nth-child(2) nav h3 {
@@ -1323,31 +1319,14 @@ form .linkLogoForm img {
     }
     
     .navBtnsForm {
-        /* position: relative;
+        position: relative;
         bottom: 0;
         margin: 2rem;
-        right: 10%; */
-        position: sticky;
-        bottom: 0;
-        background: #212121;
-        padding: 1rem;
-        margin: 0;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        gap: 1rem;
-        border-top: 2px solid #2E2C2C;
-        z-index: 10;
+        right: 10%;
     }
-    .navBtnsForm a [
-        flex: 1;
-        max-width: 150px;
-    ]
 
     .navContentCheck nav span {
         font-size: 10pt;
-        display: inline-block;
-        text-align: center;
     }
 
     footer {
