Alteração do posicionamento do navBtn

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1320,7 +1320,7 @@ form .linkLogoForm img {
     }
     
     .navBtnsForm {
-        margin: 2rem;
+        bottom: 20rem;
     }
 
     .navContentCheck nav span {
