--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1087,6 +1087,12 @@ form .navInputFormRadio input:checked + label {
     font-weight: 400;
 }
 
+.navBtnsForm {
+    position: relative;
+    bottom: 6%;
+    right: 5%;
+}
+
 form .linkLogoForm img {
     width: 50px;
 }
@@ -1310,6 +1316,13 @@ form .linkLogoForm img {
         flex-direction: column;
         align-items: center;
         justify-conten: center;
+    }
+    
+    .navBtnsForm {
+        position: relative;
+        bottom: 0;
+        margin: 2rem;
+        right: 10%;
     }
 
     .navContentCheck nav span {
