--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -914,10 +914,10 @@ footer nav:nth-child(3) div:nth-child(2) {
 }
 
 #divEnviarPalpite form {
-    width: 90%;
+    width: 99%;
     display: flex;
     align-items: top;
-    height: max-content;
+    height: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
     background: #212121;
@@ -1088,7 +1088,7 @@ form .navInputFormRadio input:checked + label {
 }
 
 .navBtnsForm {
-    position: relative;
+    position: absolute;
     bottom: 6%;
     right: 5%;
 }
